--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
         
-    <div class="book" data-level="0" data-basepath="." data-revision="1414296795705">
+    <div class="book" data-level="0" data-basepath="." data-revision="1414297160097">
     
 
 <div class="book-summary">
@@ -184,7 +184,8 @@
 <li>《清华大学计算机系列教材:操作系统实验指导》　清华大学出版社　2013</li>
 <li><a href="http://www.topu.com/mooc/4100" target="_blank">操作系统课程简单实验部分视频</a></li>
 <li><a href="http://pan.baidu.com/s/1i3vbdXV" target="_blank">操作系统课程简单实验部分的ppt和guide资料 PDF格式</a></li>
-<li><a href="http://objectkuan.gitbooks.io/ucore-docs/" target="_blank">操作系统课程简单实验部分guide资料 网页格式(正在撰写，持续更新)</a></li>
+<li><a href="http://objectkuan.gitbooks.io/ucore-docs/" target="_blank">操作系统课程简单实验部分guide资料 in gitbook(持续更新)</a></li>
+<li><a href="http://hejq.me/ucore_docs/" target="_blank">操作系统课程简单实验部分guide资料 in github(持续更新)</a></li>
 <li><a href="https://github.com/chyyuu/mooc_os_lab" target="_blank">操作系统课程简单实验部分的源代码和参考答案</a></li>
 <li><a href="http://pan.baidu.com/s/1gdePM6J" target="_blank">操作系统课程简单实验部分的软件环境与工具</a></li>
 </ul>
